test/samples/invalid/cfg/bad_label.maruir
fun foo() {
    entry:
        jump no_label;
    exit:
    return;
}
